tests/ui/type-alias-impl-trait/method_resolution4.next.stderr
error[E0271]: type mismatch resolving `u32 == Foo`
  --> $DIR/method_resolution4.rs:27:18
   |
LL |     fn foo(self: Bar<Foo>) {
   |                  ^^^^^^^^ types differ

error[E0271]: type mismatch resolving `u32 == Foo`
  --> $DIR/method_resolution4.rs:32:20
   |
LL |     fn foomp(self: &Bar<Foo>) {
   |                    ^^^^^^^^^ types differ

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
